Release history for Dist-Zilla-App-Command-dumpphases

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.000005, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - runtime: (recommends: +2)
 - test: (recommends: ↓1)

 [Internals]
 - Avoid pointless method calls to resolve defaults.

1.000005 2014-10-31T00:00:38Z 45e3144
 [Dependencies::Stats]
 - Dependencies changed since 1.000004, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: ↑2)

 [Internals]
 - stop requiring utf8
 - now supports 5.006

1.000004 2014-08-16T00:00:52Z
 [00 Trivial]
 - CPANDAY!
 - Metadata changes re: contributors

 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Metadata]
 - 2 contributors now listed as such using x_contributors instead of authors

 [Misc]
 - Moved POD around in source so there's less whitespace prior to relevant code in built source

1.000003 2014-08-06T19:37:32Z
 [Documentation]
 - Add SEE ALSO for ReportPhase.
 - Closes #4

1.000002 2014-08-03T09:31:26Z
 [Bugfix]
 - Fix documentaiton links to point to kentnl org

1.000001 2014-08-03T04:00:28Z
 [Bugfix]
 - Require a newer Path::ScanINC due to Win32 issues.

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑2)
 - runtime: ↑1
 - test: +1 -3 (recommends: ↑1 -1)

1.000000 2014-06-05T00:01:36Z
 [00 Major]
 - Moderate packaging changes that will affect hand-operated downstreams.

 [01 New Version Scheme]
 - Version scheme is now x.yyyyyy instead of x.y.z
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129
 - This is the primary reason for the 1.x on the box.

 [02 Switched to EUMM]
 - Used ExtUtils::MakeMaker for deployment instead of Module::Build