@@ -9,8 +9,9 @@ my $cwd = cwd();
 
 my $result = test_dzil( $cwd . '/corpus/basic_01', [ 'dumpphases', '--color-theme=bogus' ] );
 ok( ref $result, 'self-test executed' );
-like( $result->error, qr/Invalid theme specification/, 'invalid theme specification' );
+like( $result->error, qr/available themes/, 'Shows error loading' );
 isnt( $result->exit_code, 0, 'exit != 0' );
+note( $result->error );
 note( $result->stderr );
 
 done_testing;
