@@ -9,6 +9,8 @@ Release history for Dist-Zilla-App-Command-dumpphases
 
  [Internals]
  - Avoid pointless method calls to resolve defaults.
+ - Use simple loading to validate themes instead of complex dir scanning, and only attempt dir scanning to report
+   alternative themes when no matching theme is found.
 
 1.000005 2014-10-31T00:00:38Z 45e3144
  [Dependencies::Stats]
